--- a/style.css
+++ b/style.css
@@ -60,3 +60,79 @@ color:#86c232
 #search:hover{
     border: #86c232 2px solid;
 }
+
+
+.products{
+    width: 100%;
+    padding: 0;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+
+.products-center{
+    width: 90vw;
+    margin: 0px auto;
+    max-width: 1170px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    grid-column-gap: 1.5rem;
+    grid-row-gap: 2rem;
+
+}
+
+.product{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #000000;
+    border-radius: 10px;
+    border: #8eaebd 1px solid;
+}
+
+.pro-img{
+    display: block;
+    width: 100%;
+    min-height: 11fr;
+    padding: 5px;
+    margin: 7px;
+    box-sizing: border-box;
+    /* border: #86c232 solid; */
+    border-radius: 10px;
+}.desk{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    color: #b8c0c4;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 8px 20px 25px 30px;
+
+}
+
+.filter-box{
+/* min-width: 290px;
+max-width: 550px; */
+width:100%;
+display: flex;
+align-items: center;
+justify-content: center;
+
+}
+
+a{
+    padding: 8px ;
+    margin: 20px 30px;
+    border: #86c232 solid 1px;
+    color: #8eaebd;
+    border-radius: 5px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+a:hover{
+    background-color: #86c232;
+    color: #222629;
+
+}
